# selenium-browserstack-demo

./: .gitignore  Jenkinsfile  browserstack.yml  pyproject.toml  requirements.txt
prior_tests/: oldbstackdemo.py
src/demo/: __init__.py
tests/: test_bstackdemo.py  tests_bstackdemo.py
