[project]
name = "demo"
version = "0.1.0"
description = "Selenium test suite for BrowserStack written in Python"
readme = "README.md"
authors = [
    { name = "leroylannister", email = "leeroycodes@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "browserstack-sdk>=1.30.0",
    "pydantic-settings>=2.10.1",
    "pytest-playwright>=0.7.0",
    "pytest-selenium>=4.1.0",
    "pytest-variables>=3.1.0",
    "selenium>=4.33.0",
    "webdriver-manager>=4.0.2",
]

[project.scripts]
selenium-browserstack-demo-git = "selenium_browserstack_demo_git:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
